--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.6",
@@ -25,8 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "create-db": "nodemon ./src/server.js",
-    "seed": "node ./src/seeders"
+    "server": "nodemon ./src/backend/server.js",
+    "seed": "node ./src/backend/seeders"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
