--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.0",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.6",
     "web-vitals": "^2.1.4"
